[gd_scene load_steps=9 format=3 uid="uid://cu4erck2bbh41"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_5fdl5"]
[ext_resource type="Texture2D" uid="uid://ctpnmy7pw8qfp" path="res://oceandeep.jpeg" id="1_o3pfu"]
[ext_resource type="FontFile" uid="uid://by3glhnpn1gux" path="res://Howdy Lemon.ttf" id="2_2jldp"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fd73t"]
texture = ExtResource("1_o3pfu")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_77e4d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ffg6j"]
bg_color = Color(0.299547, 0.299547, 0.299547, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ek531"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_brrle"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5fdl5")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_fd73t")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.0
offset_top = -95.5
offset_right = 157.0
offset_bottom = 95.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 20
theme_override_constants/align_to_largest_stylebox = 20
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_77e4d")
theme_override_styles/hover = SubResource("StyleBoxFlat_ffg6j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ek531")
theme_override_styles/normal = SubResource("StyleBoxFlat_brrle")
text = "Start Game"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 20
theme_override_constants/align_to_largest_stylebox = 20
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_77e4d")
theme_override_styles/hover = SubResource("StyleBoxFlat_ffg6j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ek531")
theme_override_styles/normal = SubResource("StyleBoxFlat_brrle")
text = "About the Game"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 20
theme_override_constants/align_to_largest_stylebox = 20
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_77e4d")
theme_override_styles/hover = SubResource("StyleBoxFlat_ffg6j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ek531")
theme_override_styles/normal = SubResource("StyleBoxFlat_brrle")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 269.0
offset_top = 109.0
offset_right = 883.0
offset_bottom = 199.0
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("2_2jldp")
theme_override_font_sizes/font_size = 50
text = "Survival Under the Ocean"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Button" to="." method="on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="on_about_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="on_exit_pressed"]
